# studies

C++/: vetores  vetores.cpp
C++/Algoritmo-de-PRIM/: main.c
C++/Algoritmos-Gulosos/: main.c
C++/Busca-de-padroes/: main.c
C++/ClosedPowerlessWorkplaces/: main.cpp  tadvetor_cab.h  tadvetor_cod.cpp
C++/Haste-Dinamica/: main.c
C++/Inteiros-Sobrecarga/: inteiro.cpp  inteiro.h  main.cpp
C++/LoneSelfassuredCheckpoint/: main.c
C++/Matriz-comp-paralela (2)/: main  main.cpp
C++/MatrizOpenmp/: Normal.c  Prag.c
C++/Pilha-com-heranca-de-vetor/: main.cpp  pilha.cpp  pilha.h  vetor.cpp  vetor.h
C++/Projeto1-Implementacao-AFD/: main.c  projeto_afd.jff
C++/QuietIdealMetadata/: main.cpp  natural.cpp  natural.h
C++/Separa-positivos-e-neg/: main  main.c
C++/TAD-pilha/: main.cpp  tad_vetor_essencial.cpp  tad_vetor_essencial.h
C++/Tad-Inteiros/: header.h  inteiros_cod.cpp  main.cpp
C++/ThreadsAndMutex/: main.c
C++/Threadsfromhim (2)/: 3  main  main.c
C++/Troco-guloso/: main.c
C++/VetorOpenmp/: Normal.c  Prag.c
C++/algor-timo-guloso-salas/: main.c
C++/arvore-binaria/: main.cpp
C++/arvoreB/: arvoreB.cpp  arvoreB.h  main.cpp
C++/arvoreavl/: AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  main.cpp
C++/arvorebbb/: main.cpp
C++/arvorebinaria/: arvore.cpp  arvore.h  main.cpp  no.cpp  no.h
C++/arvorebinbruno/: main.cpp
C++/arvorebteste/: btree.cpp  btree_tools.cpp  main.cpp  (+1 more)
Pygame/: highscores.txt  teste.py
Python/: abababa.py  split.py
Python/coronacountCases/: main.py  pyproject.toml
Python/magroovecase/: main.py  pyproject.toml  teste.py
(+137 files in other folders)
