[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "soggymassiveagents"
version = "0.1.0"
[tool.poetry.dependencies]
descartes = "^1.1"
geopandas = "^0.7.0"
pandas = "^1.0"
python = "^3.7"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
